# LightCompression

./: .gitignore  CMakeLists.txt  build_and_test.sh  build_release.sh  todo.txt
source/: CMakeLists.txt  Camera.hpp  CameraSensor.hpp  Distribution.hpp  Image.hpp  Lens.hpp  LightSource.hpp  Math.hpp  Ray.hpp  Raytrace.hpp  Sphere.hpp  WritePng.hpp  main.cpp
source/geom/: Geom.hpp  Lens.hpp  Plane.hpp  Polyhedron.hpp  Ray.hpp  Sphere.hpp
source/scene/: Light.hpp  LightRay.hpp  Material.hpp  Object.hpp  Scene.hpp  Sphere.hpp
test/: CMakeLists.txt  CameraSensorTest.cpp  LensTest.cpp  RayHelpers.hpp  RaytraceTest.cpp  SphereTest.cpp  TwoElementCameraLensTest.cpp
test/geom/: LensTest.cpp  PlaneTest.cpp  PolyhedronTest.cpp  RayHelpers.hpp  SphereTest.cpp  TwoElementCameraLensTest.cpp
test/scene/: RaytraceTest.cpp
